namespace BackupsExtra.Services.Services
{
    public interface IJobCleaner
    { }
}