namespace BackupsExtra.Services.Services
{
    public interface ILogger
    {
        void Log(string message);
    }
}