namespace BackupsExtra
{
    public interface ILogMessageMaker
    {
        string MakeMessage(string message);
    }
}